--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -70,3 +70,10 @@ body {
     transition: all 0.3s ease-in-out;
   }
   
+
+  /* my own styling */
+/* .col-8,
+  .col-2{
+    border: #000000 0.5px dashed;
+    /* height: auto; */
+  /* } */ 
