--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -16,7 +16,7 @@ textarea {
 
 .jumbotron {
   text-align: center;
-  background-color: transparent;
+  
   color: black;
   border-radius: 0;
   border-bottom: 10px solid black;
@@ -70,4 +70,8 @@ textarea {
 .saveBtn i:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
+}
+
+.glyphicon{
+  color: #000000;
 }
