--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -14,12 +14,15 @@ textarea {
   padding: 10px;
 }
 
+textarea:hover{
+  border:#ff6961 solid 2px;
+}
 .jumbotron {
   text-align: center;
   
   color: black;
   border-radius: 0;
-  border-bottom: 10px solid black;
+ 
   background-color: darkslategray;
 }
 
@@ -36,6 +39,7 @@ textarea {
   white-space: pre-wrap;
   height: 80px;
   border-top: 1px solid white;
+
 }
 
 .hour {
@@ -63,7 +67,7 @@ textarea {
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-  background-color: #06aed5;
+  background-color: #365157;
   color: white;
 }
 
